Added handler to create initial api key
